# OSEF-Framework

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  ENGINEERING_LOG_2026_01_02_SESSION_2.md  FINAL_PROJECT_REPORT.md  MANIFEST.in  OSEF.Framework.csproj  README.md  REGULATORY_POSITIONING_DO178C.md  RESEARCH_LOG.md  Wiki_Home.md  Wiki_Simulation.md  environment.yml  index.html  nuget.config  package.json  pom.xml  publish.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  wiki.md
.github/workflows/: ci.yml  publish.yml  python-publish.yml
OSEF-Simulation/: README.md  main.md  simulation  xplane_integration.py
OSEF-Simulation/simulation/: __init__..py  aircraft_model.py  environment.py  limit_cycle.py  pilot_input.py
OSEF-Simulation/visualization/: animator.py  dashboard.py
data/parameters/: baladi_params.json
deployment/avionics_interface/: arinc_429_adapter.py
deployment/docker/: Dockerfile
deployment/kubernetes/: osef-deployment.yaml
docs/: api_reference.md  architecture.md  deployment_guide.md  index.md  installation.md  quick_start.md  theoretical_foundation.md
examples/: 01_basic_usage.py  02_flight_simulation.py  03_qf32_reconstruction.py  04_training_mode.py  05_fleet_monitoring.py
notebooks/: tutorial_01_introduction.ipynb  tutorial_02_limit_cycles.ipynb  tutorial_03_ccz_detection.ipynb  validation_results.ipynb
osef/: __init__.py
osef/core/: __init__.py  guidance.py  lyapunov.py  (+2 more)
tests/: __init__.py  test_basic.py  test_ci.py  test_data.py  test_guidance.py  test_limit_cycle.py  test_lyapunov.py  test_stability.py
(+11 files in other folders)
