[metadata]
name = osef-framework
version = 0.1.2
author = Samir Baladi
author_email = emerladcompass@gmail.com
description = Operational Stability Envelope Framework for Aviation Safety
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/emerladcompass/OSEF-Framework
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.8

[options.packages.find]
include = osef*
